# project-goldfish

./: LICENSE  README.md  testnet_published_output.txt
goldfish_backend/: Move.toml
goldfish_backend/sources/: goldfish_backend.move
goldfish_backend/tests/: goldfish_backend_tests.move
goldfish_frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml
goldfish_frontend/src/: App.tsx  main.tsx
goldfish_frontend/src/app/: page.tsx
goldfish_frontend/src/components/: ArturCoinInteractor.tsx  WalrusUploader.tsx  file-list-demo.tsx  file-list-proper.tsx  file-list.tsx  file-options.tsx  file-upload.tsx  header.tsx  storage-info.tsx  wallet-connect.tsx  walrus-demo-uploader.tsx
goldfish_frontend/src/constants/: index.ts
goldfish_frontend/src/hooks/: test.ts  test_output.txt  useUserFilesIds.ts  useWalrus.ts
goldfish_frontend/src/lib/: fileHelpers.ts
goldfish_mcp/: README.md  index.ts  package.json  pnpm-lock.yaml  pyproject.toml  server_dev_guide.md  tsconfig.json
goldfish_mcp_py/: README.md  pyproject.toml  server.py
goldfish_mcp_ts/: Dockerfile  README.md  full_llms_text.txt  index.ts  package.json  pnpm-lock.yaml  smithery.yaml  spec.md
goldfish_mcp_ts/src/: constants.ts  index.ts  server.ts
goldfish_mcp_ts/src/utils/: fileType.ts
