[project]
name = "goldfish-mcp"
version = "0.1.0"
description = "Model Context Protocol server for Goldfish decentralized storage"
authors = []
dependencies = [
    "mcp[cli]",
    "sui-sdk",
    "walrus-sdk",
    "pydantic>=2.4.2",
    "httpx>=0.25.1",
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
]
