[project]
name = "goldfish-mcp"
version = "0.1.0"
description = "Model Context Protocol server for Goldfish decentralized storage"
authors = []
dependencies = [
    "mcp[cli]",
    "sui-python-sdk",
    "mysten-walrus",
    "pydantic>=2.4.2",
    "httpx>=0.25.1",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "ruff>=0.2.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
